--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,5 +13,31 @@
             <button type="button" class="btn btn-outline-light text-light">Designs</button>
         </div>
     </div>
+
+    <div class="row mx-4 text-center text-secondary">
+        <div class="col text-uppercase fw-bold abt">
+           about reneilwe sesoko
+        </div>
+        <hr class="line mt-4">
+    </div>
+    <div class="row mx-5">
+        <div class="col">
+
+           <p class="fw-bold fs-3 text-center">Skills</p>
+           <p>
+               Web Development
+           </p>
+           <p>
+            UI/UX Design
+           </p>
+           <p>
+            Graphic Design
+           </p>
+
+        </div>
+        <div class="col">
+            <p class="fw-bold fs-3 text-center">About</p>
+        </div>
+    </div>
     
 </div>
