--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,13 +1,32 @@
-body{
-    height: 100vh;
+// body{
+//     height: 100vh;
+// }
+
+.container{
+	position: relative;
+    min-width: 100%;
+    height: auto;
+    min-height: 30rem;
+	height: 100vh;
+    //: 15rem 0;
 }
 
 h1{
-    font-size: 50pt;
+    //font-size: 50pt;
     background: linear-gradient(-30deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-clip: text;
     -webkit-text-fill-color: transparent;
     animation: gradient 5s ease infinite;
+}
+.abt{
+	letter-spacing: .2rem;
+}
+
+.line{
+	border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+	//background: linear-gradient(-30deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 }
 
 @keyframes gradient {
