--- a/src/app/components/top-nav/top-nav.component.html
+++ b/src/app/components/top-nav/top-nav.component.html
@@ -1,19 +1,16 @@
-<nav class="navbar navbar-expand-lg sticky-top text-light p-2">
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top text-light p-2">
     <div class="container">
-      <a class="navbar-brand" href="#">RSesoko</a>
+      <a class="navbar-brand fw-bold" href="#">RSesoko</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon text-light"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link fw-bold" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link fw-bold" href="#">Curriculm Vitae</a>
           </li>
         </ul>
 
