--- a/src/app/components/top-nav/top-nav.component.scss
+++ b/src/app/components/top-nav/top-nav.component.scss
@@ -7,11 +7,11 @@ ul li .nav-item{
 }
 
 nav{
-    background: rgba( 255, 255, 255, 0.05 );
+    background: rgba( 255, 255, 255, 0.03 );
     //box-shadow: 0 8px 32px 0 rgba(197, 198, 211, 0.37);
     backdrop-filter: blur( 4px );
     -webkit-backdrop-filter: blur( 4px );
-    //border-radius: 10px;
+    //border-radius: 10px
     border-bottom: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
