--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -11,14 +11,14 @@
     //: 15rem 0;
 }
 
-h1{
+h1,.sv, .abts {
     //font-size: 50pt;
     background: linear-gradient(-30deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-clip: text;
     -webkit-text-fill-color: transparent;
     animation: gradient 5s ease infinite;
 }
-.abt{
+.abt, .abts{
 	letter-spacing: .2rem;
 }
 
@@ -27,6 +27,11 @@ h1{
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 	//background: linear-gradient(-30deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+}
+
+#btnotl:hover{
+	background-color: white;
+	color: #0c0508;
 }
 
 @keyframes gradient {
