--- a/src/app/components/top-nav/top-nav.component.html
+++ b/src/app/components/top-nav/top-nav.component.html
@@ -10,6 +10,9 @@
             <a class="nav-link fw-bold" href="#">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link fw-bold" href="#">Design Portfolio</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link fw-bold" href="#">Curriculm Vitae</a>
           </li>
         </ul>
