--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="px-4 py-5 my-5 text-center">
+<div class="container mb-5 h-100">
+  <div class="px-4 py-5 my-5 text-center h-100" data-aos="fade-left">
     <h4 class="text-center text-uppercase fs-light m-0 abt">Reneilwe Sesoko</h4>
     <h1 class="display-1 text-center fw-bold mt-0" id="tags">
       Developer.
@@ -26,12 +26,12 @@
     <hr class="line mt-4" />
   </div>
 
-  <div class="row featurette mx-4 mt-2">
+  <div class="row featurette mx-4 mt-2" data-aos="fade-right">
     <div class="col-md-7 order-md-2">
-      <h2 class="featurette-heading">
+      <!-- <h2 class="featurette-heading">
         Hi.
         <span class="text-muted">I'm Reneilwe</span>
-      </h2>
+      </h2> -->
       <p class="lead">
         A Frontend Developer with UI and Graphic Design Skills. Checkout my
         work and feel free to get in touch if you want to work with me.
@@ -155,20 +155,38 @@
       </div>
     </div>
     <div class="col-md-5 order-md-1">
-      <svg
-        class="sv bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded"
-        width="500"
-        height="500"
-        xmlns="http://www.w3.org/2000/svg"
-        role="img"
-        aria-label="Placeholder: 500x500"
-        preserveAspectRatio="xMidYMid slice"
-        focusable="false"
-      >
-        <title>Placeholder</title>
-        <rect width="100%" height="100%" fill="#eee"></rect>
-        <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-      </svg>
+      <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('unsplash-photo-1.jpg');">
+        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+          <h2 class="pt-5 mt-5 display-6 lh-1 fw-bold">Reneilwe Sesoko</h2>
+          <ul class="d-flex list-unstyled mt-auto">
+            <li class="d-flex align-items-center">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill me-2" viewBox="0 0 16 16">
+                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+              </svg>
+              <small>South Africa, Gauteng</small>
+            </li>
+            <!-- <li class="d-flex align-items-center">
+              <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"></use></svg>
+              <small>Pretoria</small>
+            </li> -->
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
+
+  <hr class="line mt-4" />
+
+  <div class="row mx-3">
+    <div class="col">
+      <h3 class="display-5 fw-bold">Education</h3>
+    </div>
+
+    <div class="col">
+      <h3 class="display-5 fw-bold">Experience</h3>
+    </div>
+    
+  </div>
+
+  
 </div>
