--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,23 +1,19 @@
-// body{
-//     height: 100vh;
-// }
 
 .container{
 	position: relative;
     min-width: 100%;
     height: auto;
     min-height: 30rem;
-	height: 100vh;
-    //: 15rem 0;
+	//height: 100vh;
 }
 
 h1,.sv, .abts {
-    //font-size: 50pt;
     background: linear-gradient(-30deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-clip: text;
     -webkit-text-fill-color: transparent;
     animation: gradient 5s ease infinite;
 }
+
 .abt, .abts{
 	letter-spacing: .2rem;
 }
@@ -26,7 +22,6 @@ h1,.sv, .abts {
 	border: 0;
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-	//background: linear-gradient(-30deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 }
 
 #btnotl:hover{
@@ -44,4 +39,19 @@ h1,.sv, .abts {
 	100% {
 		background-position: 100% 50%;
 	}
+}
+
+.crd{
+
+	background: rgba( 255, 255, 255, 0.03 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-bottom: 1px solid rgba( 255, 255, 255, 0.18 );
+	
+}
+
+footer{
+    background: rgba( 255, 255, 255, 0.03 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
 }
