--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -175,15 +175,23 @@
     </div>
   </div>
 
-  <hr class="line mt-4" />
+  <!-- <hr class="line mt-4" /> -->
 
-  <div class="row mx-3">
+  <div class="row mx-3 mt-5">
     <div class="col">
-      <h3 class="display-5 fw-bold">Education</h3>
-    </div>
+      <div class="text-center text-uppercase fw-bold abt">
+        education
+      </div>
+      <div>
+
+      </div>
+
+    </div>  
 
     <div class="col">
-      <h3 class="display-5 fw-bold">Experience</h3>
+      <div class="text-center text-uppercase fw-bold abt">
+        experience
+      </div>
     </div>
     
   </div>
