--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -33,8 +33,8 @@
         <span class="text-muted">I'm Reneilwe</span>
       </h2> -->
       <p class="lead">
-        A Frontend Developer with UI and Graphic Design Skills. Checkout my
-        work and feel free to get in touch if you want to work with me.
+        A Frontend Developer with UI and Graphic Design Skills. Checkout my work
+        and feel free to get in touch if you want to work with me.
       </p>
       <p class="text-uppercase text-muted fw-lighter abts">
         technical skills
@@ -151,17 +151,28 @@
             d="M 6 4 C 4.895 4 4 4.895 4 6 L 4 24 C 4 25.105 4.895 26 6 26 L 24 26 C 25.105 26 26 25.105 26 24 L 26 6 C 26 4.895 25.105 4 24 4 L 6 4 z M 8 9.9921875 L 11.978516 9.9921875 C 13.947516 9.9921875 15.294922 11.339125 15.294922 13.328125 C 15.294922 15.283125 13.898344 16.623047 11.902344 16.623047 L 9.7636719 16.623047 L 9.7636719 19.857422 L 8 19.857422 L 8 9.9921875 z M 9.7636719 11.46875 L 9.7636719 15.160156 L 11.507812 15.160156 C 12.765813 15.160156 13.503906 14.504125 13.503906 13.328125 C 13.503906 12.119125 12.784672 11.46875 11.513672 11.46875 L 9.7636719 11.46875 z M 19.207031 12.226562 C 20.984031 12.226562 22.099656 13.013047 22.222656 14.373047 L 20.630859 14.373047 C 20.507859 13.847047 20.007844 13.511719 19.214844 13.511719 C 18.442844 13.511719 17.861328 13.881875 17.861328 14.421875 C 17.861328 14.845875 18.21675 15.105391 18.96875 15.275391 L 20.287109 15.576172 C 21.716109 15.897172 22.378906 16.513281 22.378906 17.613281 C 22.378906 19.050281 21.059359 20.007813 19.193359 20.007812 C 17.327359 20.007812 16.151484 19.199844 16.021484 17.839844 L 17.697266 17.839844 C 17.861266 18.393844 18.386375 18.722656 19.234375 18.722656 C 20.088375 18.722656 20.683594 18.346969 20.683594 17.792969 C 20.683594 17.368969 20.363344 17.101359 19.652344 16.943359 L 18.326172 16.636719 C 16.890172 16.308719 16.214844 15.645578 16.214844 14.517578 C 16.214844 13.163578 17.443031 12.226562 19.207031 12.226562 z"
           ></path>
         </svg>
-
       </div>
     </div>
     <div class="col-md-5 order-md-1">
-      <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('unsplash-photo-1.jpg');">
+      <div
+        class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+        style="background-image: url('unsplash-photo-1.jpg');"
+      >
         <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
           <h2 class="pt-5 mt-5 display-6 lh-1 fw-bold">Reneilwe Sesoko</h2>
           <ul class="d-flex list-unstyled mt-auto">
             <li class="d-flex align-items-center">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill me-2" viewBox="0 0 16 16">
-                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-geo-alt-fill me-2"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"
+                />
               </svg>
               <small>South Africa, Gauteng</small>
             </li>
@@ -177,24 +188,136 @@
 
   <!-- <hr class="line mt-4" /> -->
 
-  <div class="row mx-3 mt-5">
+  <div class="row mx-4 mt-5">
     <div class="col">
-      <div class="text-center text-uppercase fw-bold abt">
+      <!-- <div class="text-center text-uppercase fw-bold abt">
         education
-      </div>
-      <div>
+      </div> -->
 
-      </div>
+      <div class="">
+        <div class="card mb-3 mt-2 bg-dark p-2">
+          <div
+            class="card-header bg-transparent text-uppercase abt fw-bold text-center"
+          >
+            Education
+          </div>
+          <div class="card-body">
+            <h5 class="card-title fw-bold">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="icon icon-tabler icon-tabler-school"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                stroke-width="2"
+                stroke="currentColor"
+                fill="none"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <desc>
+                  Download more icon variants from
+                  https://tabler-icons.io/i/school
+                </desc>
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M22 9l-10 -4l-10 4l10 4l10 -4v6"></path>
+                <path d="M6 10.6v5.4a6 3 0 0 0 12 0v-5.4"></path>
+              </svg>
+              Tshwane University of Technology
+            </h5>
+            <p class="card-text">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="icon icon-tabler icon-tabler-file-certificate"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                stroke-width="2"
+                stroke="currentColor"
+                fill="none"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <desc>
+                  Download more icon variants from
+                  https://tabler-icons.io/i/file-certificate
+                </desc>
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M14 3v4a1 1 0 0 0 1 1h4"></path>
+                <path
+                  d="M5 8v-3a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2h-5"
+                ></path>
+                <circle cx="6" cy="14" r="3"></circle>
+                <path d="M4.5 17l-1.5 5l3 -1.5l3 1.5l-1.5 -5"></path>
+              </svg>
 
-    </div>  
-
-    <div class="col">
-      <div class="text-center text-uppercase fw-bold abt">
-        experience
+              National Diploma Information Technology: Multimedia
+            </p>
+          </div>
+        </div>
       </div>
     </div>
-    
-  </div>
 
-  
+    <div class="col">
+      <div class="card mb-3 mt-2 bg-dark p-2">
+        <div
+          class="card-header bg-transparent text-uppercase abt fw-bold text-center"
+        >
+          Experience
+        </div>
+        <div class="card-body">
+          <h5 class="card-title fw-bold">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon-tabler icon-tabler-building"
+              width="24"
+              height="24"
+              viewBox="0 0 25 25"
+              stroke-width="2"
+              stroke="currentColor"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <desc>
+                Download more icon variants from
+                https://tabler-icons.io/i/building
+              </desc>
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+              <line x1="3" y1="21" x2="21" y2="21"></line>
+              <line x1="9" y1="8" x2="10" y2="8"></line>
+              <line x1="9" y1="12" x2="10" y2="12"></line>
+              <line x1="9" y1="16" x2="10" y2="16"></line>
+              <line x1="14" y1="8" x2="15" y2="8"></line>
+              <line x1="14" y1="12" x2="15" y2="12"></line>
+              <line x1="14" y1="16" x2="15" y2="16"></line>
+              <path d="M5 21v-16a2 2 0 0 1 2 -2h10a2 2 0 0 1 2 2v16"></path>
+            </svg>
+
+            The Digital Academy
+          </h5>
+          <p class="card-text">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="20"
+              fill="currentColor"
+              class="bi bi-briefcase"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M6.5 1A1.5 1.5 0 0 0 5 2.5V3H1.5A1.5 1.5 0 0 0 0 4.5v8A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-8A1.5 1.5 0 0 0 14.5 3H11v-.5A1.5 1.5 0 0 0 9.5 1h-3zm0 1h3a.5.5 0 0 1 .5.5V3H6v-.5a.5.5 0 0 1 .5-.5zm1.886 6.914L15 7.151V12.5a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5V7.15l6.614 1.764a1.5 1.5 0 0 0 .772 0zM1.5 4h13a.5.5 0 0 1 .5.5v1.616L8.129 7.948a.5.5 0 0 1-.258 0L1 6.116V4.5a.5.5 0 0 1 .5-.5z"
+              />
+            </svg>
+            Full-Stack Developer (Intern) |
+            2021 - Present
+
+          </p>
+        </div>
+      </div>
+      <!-- <div class="text-center text-uppercase fw-bold abt">
+        experience
+      </div> -->
+    </div>
+  </div>
 </div>
