--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -2,4 +2,5 @@ footer{
     background: rgba( 255, 255, 255, 0.03 );
     backdrop-filter: blur( 4px );
     -webkit-backdrop-filter: blur( 4px );
+    border-top: 1px solid rgba( 255, 255, 255, 0.18 );
 }
