--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,5 +1,5 @@
 <div class="container">
     <div class="col text-uppercase text-center fw-bold abt mt-3">
-        curriculm vitae
+        Projects i've contributed on
       </div>
 </div>
