--- a/src/app/components/top-nav/top-nav.component.html
+++ b/src/app/components/top-nav/top-nav.component.html
@@ -7,13 +7,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link fw-bold" href="#">Home</a>
+            <a class="nav-link fw-bold" routerLink="/home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fw-bold" href="#">Design Portfolio</a>
+            <a class="nav-link fw-bold" routerLink="/">Design Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fw-bold" href="#">Curriculm Vitae</a>
+            <a class="nav-link fw-bold" routerLink="/cv">Curriculm Vitae</a>
           </li>
         </ul>
 
