cv page updated

--- a/src/app/components/top-nav/top-nav.component.scss
+++ b/src/app/components/top-nav/top-nav.component.scss
@@ -16,6 +16,10 @@ nav{
     border-bottom: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
+.navbar-nav{
+    letter-spacing: .1rem;
+}
+
 span .navbar-toggler{
     color: white;
 }
