--- a/src/app/components/top-nav/top-nav.component.html
+++ b/src/app/components/top-nav/top-nav.component.html
@@ -5,7 +5,7 @@
         <span class="navbar-toggler-icon text-light"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-uppercase text-white">
           <li class="nav-item">
             <a class="nav-link fw-bold" routerLink="/home">Home</a>
           </li>
@@ -13,7 +13,7 @@
             <a class="nav-link fw-bold" routerLink="/">Design Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fw-bold" routerLink="/cv">Curriculm Vitae</a>
+            <a class="nav-link fw-bold" routerLink="/cv">Curriculum Vitae</a>
           </li>
         </ul>
 
