--- a/src/app/pages/curriculm-vitae/curriculm-vitae.component.html
+++ b/src/app/pages/curriculm-vitae/curriculm-vitae.component.html
@@ -78,6 +78,7 @@
 
         <dt class="col-sm-3 text-muted">National Diploma</dt>
         <dd class="col-sm-9">
+          <p>Tshwane University of Technology</p>
           <p class="lh-0">
             Information Technology: Multimedia
           </p>
