--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container mb-5 h-100">
   <div class="px-4 py-5 my-5 text-center h-100" data-aos="fade-left">
-    <h4 class="text-center text-uppercase fs-light m-0 abt">Reneilwe Sesoko</h4>
+    <h6 class="text-center text-uppercase fs-light m-0 abt">Reneilwe Sesoko</h6>
     <h1 class="display-1 text-center fw-bold mt-0" id="tags">
       Developer.
     </h1>
@@ -21,7 +21,7 @@
 
   <div class="row mx-4 text-center text-secondary">
     <div class="col text-uppercase fw-bold abt">
-      about reneilwe sesoko
+      about me
     </div>
     <hr class="line mt-4" />
   </div>
@@ -152,13 +152,14 @@
           ></path>
         </svg>
       </div>
+      
     </div>
     <div class="col-md-5 order-md-1">
       <div
-        class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+        class="mx-auto"
         style="background-image: url('unsplash-photo-1.jpg');"
       >
-        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1 blob">
           <h2 class="pt-5 mt-5 display-6 lh-1 fw-bold">Reneilwe Sesoko</h2>
           <ul class="d-flex list-unstyled mt-auto">
             <li class="d-flex align-items-center">
@@ -186,7 +187,15 @@
     </div>
   </div>
 
-  <!-- <hr class="line mt-4" /> -->
+ 
+
+  <hr class="line mt-4" />
+
+  <div class="">
+
+     
+
+  </div>
 
   <div class="row mx-4 mt-5">
     <div class="col">
